--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">BirthdayCake</string>
+    <string name="how_many_candles">How many candles?</string>
+    <string name="frosting">Frosting</string>
+    <string name="blow_out">Blow Out</string>
+    <string name="goodbye">Goodbye</string>
+    <string name="candles">Candles</string>
 </resources>
