Changed text of Blow Out to say Extinguish instead.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="blow_out">Blow Out</string>
     <string name="goodbye">Goodbye</string>
     <string name="candles">Candles</string>
+    <string name="extinguish">Extinguish</string>
 </resources>
